# datasciw255

./: README.md
.github/: copilot-instructions.md
final_project/: .gitignore  README.md  build-deploy.sh
final_project/project/: Dockerfile  README.md  example.py  load.js  pyproject.toml
final_project/project/.k8s/bases/: deployment-project.yaml  deployment-redis.yaml  kustomization.yaml  service-project.yaml
final_project/project/.k8s/overlays/dev/: kustomization.yaml  patch-deployment-project.yaml
final_project/project/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-project.yaml  patch-deployment-project_copy.yaml  virtual-service.yaml
final_project/project/src/: main.py
final_project/project/yamls/: deployment-project.yaml  namespaces.yaml  persistent_volume.yaml  service-app.yaml
lab_1/: README.md  run.sh
lab_1/lab1/: Dockerfile  README.md  pyproject.toml
lab_1/lab1/src/: main.py
lab_1/lab1/tests/: test_lab1.py
lab_2/lab2/: Dockerfile  README.md  model_pipeline.pkl  pyproject.toml  run.sh
lab_2/lab2/src/: main.py
lab_2/lab2/tests/: test_lab2.py
lab_2/lab2/trainer/: pyproject.toml  train.py
lab_3/: run.sh
lab_3/lab3/: Dockerfile  docker-compose.yml  pyproject.toml
lab_3/lab3/src/: main.py
lab_3/lab3/tests/: test_hello.py  test_predict.py
lab_3/lab3/yamls/: config_map.yaml  deployment-lab3.yaml  deployment-redis.yaml  persistent_volume.yaml  service-app.yaml  service-redis.yaml
lab_4/: README.md  build-push.sh  run.sh
lab_4/lab4/: Dockerfile  model_pipeline.pkl  pyproject.toml  requirements.txt
lab_4/lab4/.k8s/bases/: deployment-lab4.yaml  kustomization.yaml  persistent-volume.yaml  service-lab4.yaml
lab_4/lab4/.k8s/overlays/dev/: kustomization.yaml  patch-deployment-lab4.yaml
lab_4/lab4/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-lab4.yaml  patch-deployment-lab4_copy.yaml  virtual-service.yaml
lab_4/lab4/src/: main.py
lab_4/lab4/yamls/: config_map.yaml  deployment-lab4.yaml  deployment-redis.yaml  service-app.yaml  service-redis.yaml
lab_5/: Findings.md  README.md  load.js
